--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.2.2",
     "body-parser": "^1.20.1",
     "config": "^3.3.8",
     "ejs": "^3.1.8",
