--- a/package.json
+++ b/package.json
@@ -1,10 +1,13 @@
 {
   "name": "botTelegram",
   "version": "1.0.0",
-  "description": "",
+  "description": "A sample Node.js app using Express 4",
+  "engines": {
+    "node": "16.x"
+  },
   "main": "server.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "node test.js",
     "start": "node server.js"
   },
   "repository": {
@@ -25,5 +28,15 @@
     "express": "^4.18.2",
     "mysql": "^2.18.1",
     "node-telegram-bot-api": "^0.61.0"
-  }
+  },
+  "devDependencies": {
+    "got": "^11.3.0",
+    "tape": "^4.7.0"
+  },
+  "keywords": [
+    "node",
+    "heroku",
+    "express"
+  ],
+  "license": "MIT"
 }
